--- a/main.css
+++ b/main.css
@@ -29,8 +29,21 @@ header nav li a{
     margin: 0 auto;
 }
 
-header .container{
+header .container, 
+section .container{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.brands-list img{
+    height: 24px;
+}
+
+.brands-list li{
+    display: inline;
+}
+
+section .container{
+    align-items: flex-start;
 }
