--- a/main.css
+++ b/main.css
@@ -23,6 +23,17 @@ header nav li a{
     text-decoration: none;
 }
 
+header h1, section h2{
+    font-weight: normal;
+}
+
+header, section h2{
+    font-family: "Bungee", sans-serif;
+}
+body{
+    font-family: "Roboto", sans-serif;
+}
+
 .container{
     max-width: 1200px;
     width: 100%;
@@ -42,8 +53,27 @@ section .container{
 
 .brands-list li{
     display: inline;
+    margin-right: 8px;
 }
 
 section .container{
     align-items: flex-start;
 }
+
+section{
+    padding:24px;
+    color: #182c61;
+}
+section h2{
+    margin-bottom: 16px;
+}
+
+section p{
+    margin-bottom: 8px;
+}
+
+.store-front{
+    margin-right: 32px;
+}
+
+
