--- a/main.css
+++ b/main.css
@@ -76,4 +76,28 @@ section p{
     margin-right: 32px;
 }
 
+.social-links{
+    height: 24px;
+}
+
+#contact .container{
+    display: block;
+}
+
+.contact-methods{
+    display: flex;
+    justify-content: space-between;
+}
+
+form input, textarea{
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+form textarea{
+    resize: none;
+}
+
 
