--- a/main.css
+++ b/main.css
@@ -23,20 +23,18 @@ header nav li a{
     text-decoration: none;
 }
 
-header h1, section h2{
-    font-weight: normal;
-}
 
-header, section h2{
+header, section h2, section h3, form#bottom{
     font-family: "Bungee", sans-serif;
 }
-body{
+
+body, input, textarea{
     font-family: "Roboto", sans-serif;
 }
 
 .container{
-    max-width: 1200px;
-    width: 100%;
+    max-width: 1266px;
+    width: 100vw;
     margin: 0 auto;
 }
 
@@ -76,8 +74,17 @@ section p{
     margin-right: 32px;
 }
 
-.social-links{
+.social-links img{
     height: 24px;
+}
+
+.social-links li{
+    display: inline;
+    margin-right: 8px;
+}
+
+.social-links li a {
+    text-decoration: none;
 }
 
 #contact .container{
@@ -98,6 +105,32 @@ form input, textarea{
 
 form textarea{
     resize: none;
+    height: 180px;
+}
+
+section h3{
+    margin-bottom: 16px;
+}
+
+#bottom{
+    background-color: #182c61;
+    color: #ecf0f1;
+    border: none;
+    cursor: pointer;
+}
+
+#bottom:hover{
+    background-color: #314e9e;
+}
+
+input:focus, textarea:focus{
+    outline-color: #182c61;
+}
+
+footer {
+    background-color: #182c61;
+    color: #ecf0f1;
+    padding: 16px 0;
 }
 
 
